# ccsp-openvpn-client-manager

./: README.md  cmpnt_build_custom_pre.mk  configure.ac
config/: CcspOpenVPNClientMgr.service  openVPN_client.xml
scripts/: CcspTestComponent.service  TestComponent.xml
source/: Makefile.am
source/TestComponent/: cosa_apis_testcomponentplugin.c  cosa_apis_testcomponentplugin.h  plugin_main.c  ssp_main.c  ssp_messagebus_interface.h
source/core/: client_config_generation.c  client_config_generation.h
source/dml/: Makefile.am
source/dml/openvpn_client_ssp/: Makefile.am  common.h  cosa_apis.h  cosa_apis_openvpn.h  cosa_apis_testcomponentplugin.h  cosa_openvpn_dml.c  plugin_main.c  plugin_main.h  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h  utils.c  utils.h
source/dml/tr-181/: Makefile.am  cosa_apis_testcomponentplugin.c  cosa_apis_testcomponentplugin.h
source/openvpn_runner/: Makefile.am  main.c  process_handler.c  process_handler.h
